Update website with local changes

--- a/Products.html
+++ b/Products.html
@@ -4,6 +4,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title> Vero – Natural Energy</title>
+  
+  <!-- Google Analytics 4 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JWFPL9ZW9R"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-JWFPL9ZW9R', {
+      'send_page_view': true,
+      'anonymize_ip': true
+    });
+  </script>
+  
   <link rel="stylesheet" href="style.css?v=16" />
   <link rel="stylesheet" href="deux-style.css" />
 </head>
@@ -78,8 +91,8 @@
       width: 100%;
     }
     .vero-navbar__cta {
-      background-color: white;
-      color: black;
+      background-color: #10B981;
+      color: white;
       border-radius: 10em;
       font-size: 17px;
       font-weight: 600;
@@ -179,7 +192,7 @@
           <li><a class="vero-navbar__link" href="Nutrition.html">Nutrition</a></li>
           <li><a class="vero-navbar__link" href="Our-Story.html">Our Story</a></li>
         </ul>
-        <a href="#products" class="vero-navbar__cta">Shop Now</a>
+        <a href="#products" class="vero-navbar__cta">Get Energized</a>
       </div>
     </div>
   </nav>
